# splinter-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  context7.json  release.toml
.github/workflows/: rust.yml
benches/: benchv2.rs  bitmaps.rs  bitop_bench.rs  count_bench.rs  op_bench.rs
examples/: zerocopy.rs
proptest-regressions/: codec.txt  splinter.txt  splinter_ops.txt  splinter_ref.txt
proptest-regressions/partition/: bitmap.txt  run.txt  tree.txt  vec.txt
src/: bitmap.rs  block.rs  codec.rs  cow.rs  index.rs  level.rs  lib.rs  never.rs  ops.rs  partition.rs  partition_kind.rs  partition_ops.rs  relational.rs  segment.rs  splinter.rs  splinter_ops.rs  splinter_ref.rs  splinter_ref_ops.rs  splinterv2.rs  testutil.rs  traits.rs  u24.rs  util.rs
src/block/: cmp.rs  cut.rs  intersection.rs  merge.rs  union.rs
src/codec/: encoder.rs  footer.rs  partition_ref.rs  runs_ref.rs  tree_ref.rs
src/partition/: bitmap.rs  run.rs  tree.rs  vec.rs
src/splinter/: cmp.rs  cut.rs  intersection.rs  merge.rs  union.rs
src/splinterv2/: codec.rs  count.rs  encode.rs  level.rs  never.rs  ops.rs  partition.rs  segment.rs  traits.rs
src/splinterv2/codec/: container.rs  encoder.rs  footer.rs  partition_ref.rs  runs_ref.rs  tree_ref.rs
src/splinterv2/partition/: bitmap.rs  run.rs  tree.rs  vec.rs
