[package]
name = "splinter-rs"
version = "0.5.1"
edition = "2024"
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/splinter-rs"
homepage = "https://github.com/orbitinghail/splinter-rs"
rust-version = "1.87"

keywords = ["bitmap", "compression", "zero-copy"]
categories = ["data-structures", "encoding"]
description = "A compressed bitmap format optimized for small, sparse sets of u32s with zero-copy querying."

[lints.clippy]
disallowed_methods = "deny"
uninlined-format-args = "warn"
doc-markdown = "warn"
map-unwrap-or = "warn"

[dependencies]
culprit = "0.4"
bytes = "1.10"
either = "1.15"
thiserror = "2.0"
zerocopy = { version = "0.8", features = ["derive"] }
itertools = "0.14"
num = "0.4"
static_assertions = "1.1"
bitvec = "1.0.1"
u24 = { version = "0.4.0", features = ["range-set-blaze"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
crc64fast-nvme = "1.2.0"
assert_matches = "1.5.0"
range-set-blaze = "0.3.0"
rand = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "=0.7.0"
roaring = "=0.11.2"
lz4 = "=1.28.1"
splinter-rs = { path = ".", features = ["testutil"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
testutil = ["dep:rand"]

[[bench]]
name = "op_bench"
harness = false

[[bench]]
name = "count_bench"
harness = false
