[package]
name = "splinter-rs"
version = "0.12.0"
edition = "2024"
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/splinter-rs"
homepage = "https://github.com/orbitinghail/splinter-rs"
rust-version = "1.87"

keywords = ["bitmap", "compression", "zero-copy"]
categories = ["data-structures", "encoding"]
description = "A compressed bitmap format optimized for small, sparse sets of u32s with zero-copy querying."

[lints.clippy]
disallowed_methods = "deny"
uninlined-format-args = "warn"
doc-markdown = "warn"
map-unwrap-or = "warn"

[dependencies]
assert_matches = "1.5.0"
bitvec = "1.0.1"
bytes = "1.10"
crc64fast-nvme = "1.2.0"
either = "1.15"
itertools = "0.14"
num = "0.4"
proptest = { version="1.7.0", optional=true}
rand = { version = "0.9", optional = true }
range-set-blaze = "0.4.0"
static_assertions = "1.1"
thiserror = "2.0"
u24 = { version = "0.5.0", features = ["range-set-blaze"] }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
splinter-rs = { path = ".", features = ["testutil"] }

criterion = "=0.8.0"
lz4 = "=1.28.1"
roaring = "=0.11.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
testutil = ["dep:rand", "dep:proptest"]

[[bench]]
name = "op_bench"
harness = false

[[bench]]
name = "count_bench"
harness = false
